# loan-sanction-prediction

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
config/: config.toml  config.yaml  config_v2.toml
data/interim/: cleaned_data_v1.csv  cleaned_train_data_v1.csv  cleaned_train_data_v2.csv  feature_engineered_train_data_v1.csv
models/: preprocessor.joblib
notebooks/: 1_initial_data_assessment.ipynb  2_data_cleaning.ipynb  3_exploratory_data_analysis.ipynb  4_feature_engineering.ipynb  5_model_building.ipynb  experimentation.ipynb
reports/: environment.md  experimentation.md
scripts/: data_cleaning.py
src/: config.py  streamlit_app.py
src/loan_sanction_prediction/: __init__.py  config.yaml  evaluate.py  plot.py  predict.py  preprocess_data.py  process_data.py  split_data.py  streamlit_app.py  train.py  utils.py
